# issue-demo-1

./: README.md  WORKSPACE.bazel  package-lock.json  package.json  tsconfig.json
src/app/: BUILD.bazel  index.ts
