package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "app",
    srcs = glob(
        ["**/*.ts"],
    ),
    declaration = True,
    resolve_json_module = True,
    tsconfig = "//:tsconfig.json",
    deps = [
    ],
)
